# portfolio

./: .gitignore  .gitmodules  README.md
asynchronous_schemes/: navierstokes.f
game_boy_emulator/: README.md
game_boy_emulator/assembly/: README.md  arg_bytes.cpp  instr_call.cpp  instr_call.hpp  instr_interface.hpp  instr_xor.cpp  instr_xor.hpp  instructions.cpp  sub.asm
game_boy_emulator/bus/: README.md  bus.cpp  bus.hpp
game_boy_emulator/cartridge/: README.md  cartridge_interface.cpp  cartridge_interface.hpp  factory.cpp  factory.hpp  mbc2.cpp  mbc2.hpp  mbc3.cpp  mbc3.hpp
game_boy_emulator/performance_and_audio/: README.md  audio.cpp  audio.hpp
game_boy_emulator/ppu/: README.md  pipeline.cpp
gpu_numerics/: Makefile  Makefile-haru  README.txt  multigrid.cc  multigrid_cuda.cu  multigrid_cuda.cuh
irregular_geometry_pde_solver/: README.md  solver.py  square.py  star.py  teardrop.py
optimization/: README.md
pde_solver_irregular_geometries_cpp/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
pde_solver_irregular_geometries_cpp/examples/: CMakeLists.txt  example_01_circle.cpp  example_02_star_and_square.cpp
pde_solver_irregular_geometries_cpp/include/: solver.h
pde_solver_irregular_geometries_cpp/src/: CMakeLists.txt  Makefile  grid.cpp  grid.hpp  main.cpp  rootfinder.cpp  rootfinder.hpp  scheme.cpp  scheme.hpp  shapes.hpp  solver.cpp  solver.hpp  utilities.hpp
pde_solver_irregular_geometries_cpp/tools/: plotter.py
pde_solver_irregular_geometries_python/: README.md  complex.py  solver.py
wrappers/: Makefile.in  chemtable_inputs
(+312 files in other folders)
